Fix other popover layout issues

--- a/app/styles/ui/_diff-options.scss
+++ b/app/styles/ui/_diff-options.scss
@@ -66,8 +66,6 @@
   }
 
   .popover-component {
-    position: absolute;
-
     width: 250px;
   }
 }
